# telnyx-skills

./: .gitignore  .manual-plugins.json  CONTRIBUTING.md  README.md  agent.json  gemini-extension.json  package-lock.json  package.json  skills-index.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md
cli/: README.md  package-lock.json  package.json  tsconfig.json
guides/: 10dlc-registration.md  ai-assistants.md  phone-numbers.md  phone-verification.md  porting-orders.md  sms-messaging.md  voice-call-control.md  webhooks.md  wireguard-networking.md  x402-payments.md
scripts/: check-skills-sync.sh  sync-skills.sh
skills/: README.md
telnyx-10dlc-go/: SKILL.md
telnyx-10dlc-java/: SKILL.md
telnyx-10dlc-javascript/: SKILL.md
telnyx-10dlc-python/: SKILL.md
telnyx-10dlc-ruby/: SKILL.md
telnyx-account-access-go/: SKILL.md
telnyx-account-access-java/: SKILL.md
telnyx-account-access-javascript/: SKILL.md
telnyx-account-access-python/: SKILL.md
telnyx-account-access-ruby/: SKILL.md
telnyx-account-go/: SKILL.md
telnyx-account-java/: SKILL.md
telnyx-account-javascript/: SKILL.md
telnyx-account-management-go/: SKILL.md
telnyx-account-management-java/: SKILL.md
telnyx-account-management-javascript/: SKILL.md
telnyx-account-management-python/: SKILL.md
telnyx-account-management-ruby/: SKILL.md
telnyx-account-notifications-go/: SKILL.md
telnyx-account-notifications-java/: SKILL.md
telnyx-account-notifications-javascript/: SKILL.md
telnyx-account-notifications-python/: SKILL.md
telnyx-account-notifications-ruby/: SKILL.md
telnyx-account-python/: SKILL.md
telnyx-account-reports-go/: SKILL.md
telnyx-account-reports-java/: SKILL.md
telnyx-account-reports-javascript/: SKILL.md
telnyx-account-reports-python/: SKILL.md
telnyx-account-reports-ruby/: SKILL.md
telnyx-account-ruby/: SKILL.md
tools/ffl-cli/: .gitignore  LICENSE  README.md  meta-dev.yml  pyproject.toml  setup.py
tools/ffl-cli/examples/: basic_usage.sh  from_python.py  skill_integration.py
tools/ffl-cli/src/telnyx_ffl_cli/: __init__.py  __main__.py  cli.py  reporter.py  validators.py
tools/ffl-cli/templates/: SKILL_TEMPLATE.md  SKILL_TEMPLATE_MINIMAL.md
tools/python/: README.md  pyproject.toml
tools/python/examples/crewai/: README.md  main.py
tools/python/examples/langchain/: README.md  main.py
tools/python/examples/openai/: README.md  main.py
tools/python/telnyx_agent_toolkit/: __init__.py  configuration.py
tools/python/telnyx_agent_toolkit/crewai/: __init__.py  toolkit.py
tools/python/telnyx_agent_toolkit/langchain/: __init__.py  toolkit.py
tools/python/telnyx_agent_toolkit/openai/: __init__.py  toolkit.py
tools/python/telnyx_agent_toolkit/shared/: __init__.py  api_client.py  constants.py  friction.py  telemetry.py  toolkit_core.py
tools/python/tests/: test_api_client.py  test_configuration.py  test_crewai_toolkit.py  test_e2e_telemetry.py  test_friction.py  test_integration.py  test_integration_ci.py  test_langchain_toolkit.py  test_openai_toolkit.py  test_telemetry.py  test_tools.py  test_x402.py
(+1494 files in other folders)
