[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telnyx-agent-toolkit"
version = "0.1.0"
description = "Telnyx Agent Toolkit — tools for building AI agents with Telnyx APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Telnyx", email = "support@telnyx.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["telnyx", "ai", "agent", "toolkit", "sms", "voice", "telecom"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
all = [
    "openai>=1.0.0",
    "langchain-core>=0.3.0",
    "crewai>=0.80.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[project.urls]
Homepage = "https://github.com/team-telnyx/ai"
Documentation = "https://developers.telnyx.com"
Repository = "https://github.com/team-telnyx/ai"
Issues = "https://github.com/team-telnyx/ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["telnyx_agent_toolkit"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
